--- a/FreshN1/FreshN1/packages.config
+++ b/FreshN1/FreshN1/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Fody" version="1.29.2" targetFramework="portable45-net45+win8+wpa81" developmentDependency="true" />
+  <package id="Acr.UserDialogs" version="6.0.1" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Fody" version="1.29.4" targetFramework="portable45-net45+win8+wpa81" developmentDependency="true" />
   <package id="FreshMvvm" version="2.1.0" targetFramework="portable45-net45+win8+wpa81" />
   <package id="PropertyChanged.Fody" version="1.51.3" targetFramework="portable45-net45+win8+wpa81" developmentDependency="true" />
-  <package id="Xamarin.Forms" version="2.0.0.6482" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Splat" version="1.6.2" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Xamarin.Forms" version="2.3.1.114" targetFramework="portable45-net45+win8+wpa81" />
 </packages>
