--- a/FreshN1/FreshN1/FreshN1.csproj
+++ b/FreshN1/FreshN1/FreshN1.csproj
@@ -36,14 +36,28 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="App.cs" />
+    <Compile Include="Infrastructure\Constants\PageNames.cs" />
     <Compile Include="Models\Contact.cs" />
+    <Compile Include="Models\Quote.cs" />
     <Compile Include="PageModels\ContactListPageModel.cs" />
     <Compile Include="PageModels\ContactPageModel.cs" />
+    <Compile Include="PageModels\MenuPageModel.cs" />
+    <Compile Include="PageModels\QuoteListPageModel.cs" />
+    <Compile Include="PageModels\QuotePageModel.cs" />
     <Compile Include="Pages\ContactListPage.xaml.cs">
       <DependentUpon>ContactListPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\ContactPage.xaml.cs">
       <DependentUpon>ContactPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\MenuPage.xaml.cs">
+      <DependentUpon>MenuPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\QuoteListPage.xaml.cs">
+      <DependentUpon>QuoteListPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\QuotePage.xaml.cs">
+      <DependentUpon>QuotePage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DataService.cs" />
@@ -102,6 +116,24 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Pages\ContactPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Pages\MenuPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Pages\QuoteListPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Pages\QuotePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
